<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Instant\nSMS / USSD</string>

  <string name="head__action_new">Add message</string>

  <string name="f_msg_actions_dialog__title">Pick an action</string>
  <string name="f_msg_actions_dialog__action__edit">Edit</string>
  <string name="f_msg_actions_dialog__action__delete">Delete</string>

  <string name="f_msg_show_send_warning_dialog__title">Do you want to send this message?</string>
  <string name="f_msg_show_send_warning_dialog__positive_button">Yes</string>
  <string name="f_msg_show_send_warning_dialog__negative_button">No</string>

  <string name="f_msg_list__empty">Use plus button to add an item</string>
  <string name="f_msg_list__msg_added">Message \'%1$s\' has been created</string>
  <string name="f_msg_list__error__msg_added">Fail! Message \'%1$s\'  hasn\'t been created</string>
  <string name="f_msg_list__msg_updated">Message \'%1$s\' has been saved</string>
  <string name="f_msg_list__error__msg_updated">Fail! Message \'%1$s\'  hasn\'t been saved</string>

  <string name="a_head__sms_sending">The SMS has been sent</string>
  <string name="a_head__sms_sent_ok">The SMS has been sent</string>
  <string name="a_head__sms_sent_generic_failure">Error: The SMS hasn\'t been sent</string>
  <string name="a_head__sms_sent_no_service">Error: No service</string>
  <string name="a_head__sms_sent_null_pdu">Error: Null PDU</string>
  <string name="a_head__sms_sent_radio_off">Error: Radio off</string>  

  <string name="a_create_msg__type">Type</string>
  <string name="a_create_msg__general">General</string>
  <string name="a_create_msg__options">Options</string>
  <string name="a_create_msg__address__hint">Address</string>
  <string name="a_create_msg__description__hint">Description</string>
  <string name="a_create_msg__message__hint">Message</string>
  <string name="a_create_msg__warning__costs_money__line_1">Warn me when I send this message</string>
  <string name="a_create_msg__warning__costs_money__line_2">maybe it costs you money</string>
  <string name="a_create_msg__buttons__add">Add</string>
  <string name="a_create_msg__buttons__save">Save</string>
  <string name="a_create_msg__buttons__cancel">Cancel</string>
  <string name="a_create_msg__error__cannot_create_msg">Please, fill out all necessary fields</string>
  <string name="a_create_msg__error__contact_hasnot_phone">@string/contact_hasnt_phone</string>

  <!-- -->

  <string name="no_items_warning">Use menu button to add an item</string>

  <string name="sms_sent_ok">The SMS has been sent</string>
  <string name="sms_sent_generic_failure">Error: The SMS hasn\'t been sent</string>
  <string name="sms_sent_no_service">Error: No service</string>
  <string name="sms_sent_null_pdu">Error: Null PDU</string>
  <string name="sms_sent_radio_off">Error: Radio off</string>

  <string name="sms_sending">Sending SMS</string>
  <string name="sms_sending_warning">Do you want to send this message?</string>
  <string name="sms_sending_cbox_warning">Warn me when I send this message (maybe it costs you money)</string>

  <string name="contact_hasnt_phone">This contact doesn\'t have a phone number</string>

  <string name="yes_button">Yes</string>
  <string name="no_button">No</string>

  <string name="edit_button">Edit</string>
  <string name="add_button">Add</string>
  <string name="cancel_button">Cancel</string>

  <string name="edit_context">Edit</string>
  <string name="delete_context">Delete</string>
  <string name="go_back_context">Go back</string>

  <string name="add_item_menu">Add item</string>

  <string name="select_type">Select type</string>

  <string name="etext_help_hint">Description</string>
  <string name="etext_address_hint">Address</string>
  <string name="etext_text_hint_sms">Message</string>
  <string name="etext_text_hint_ussd">USSD code</string>

  <string name="widget_top">Instant</string>
  <string name="widget_bottom">SMS/USSD</string>

  <!-- from preferences -->

  <string name="sort_preferences">Sort preferences</string>
  <string name="sort_preferences_type">Sort by type</string>
  <string name="sort_preferences_name">Sort by name (description)</string>

  <string-array
      name="sort_type_entries">
    <item>SMS first</item>
    <item>USSD first</item>
    <item>none</item>
  </string-array>

  <string-array
      name="sort_name_entries">
    <item>A-Z</item>
    <item>Z-A</item>
    <item>none</item>
  </string-array>

  <string-array
        name="a_create_msg__spinner__entries">
        <item>USSD</item>
        <item>SMS</item>
    </string-array>


</resources>
