<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

  <CheckBox android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_sending_cbox_warning"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/add_activity_cbox_warning"/>
  
  <EditText android:id="@+id/add_activity_etext_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etext_help_hint">
    <requestFocus/>
  </EditText>

  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    
    <EditText android:id="@+id/add_activity_etext_address"
              android:hint="@string/etext_address_hint"
              android:inputType="phone"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:layout_weight="1"/>

    <!-- find in contacts button -->
    
    <ImageButton android:id="@+id/add_activity_ib_contact"
                 android:src="@drawable/ic_button_body"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:onClick="onContactButtonClick"/>
  </LinearLayout>
  
  <EditText android:id="@+id/add_activity_etext_text"
            android:gravity="top"
            android:hint="@string/etext_text_hint_sms"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1" />

</LinearLayout>
